# ESG-Navigator

./: README.md  company_manager_ui.py  complaint_ui.py  environment.yml  pyproject.toml  requirements.txt  uber_pickups.py
01_Frontend/: styles.css
Frontend/pages/: 1_landing_page.py  3_company_manager_ui.py
UComply.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
esg_navigator/: .gitignore  Dashboard.py  File_a_Report.py  config.yaml  generate_keys.py  helper.py
esg_navigator/backend/: helper.py
esg_navigator/data/: complaints_db.csv  manager_db.csv
esg_navigator/data/chats/: 1234_chat_history.csv  152c02bc1ed81ee6_chat_history 2.csv  50b363d69904e6ca_chat_history 2.csv  50b363d69904e6ca_chat_history.csv  573539b919709987_chat_history.csv  696e72e21ae5b466_chat_history.csv  8e8c6f9a871dfe56_chat_history.csv
esg_navigator/frontend/: app.py  config.yaml  styles.css
esg_navigator/frontend/managing_view/: Dashboard.py
esg_navigator/frontend/managing_view/pages/: Case_Overview.py  Generate_Report.py
esg_navigator/frontend/pages/: case_status.py  complaint_ui.py  dashboard.py
esg_navigator/frontend/user_view/: File_a_Report.py
esg_navigator/frontend/user_view/pages/: 1_Info_Section.py  2_Education.py  3_Report_Status.py  Info_Section.py  Report_Status.py
esg_navigator/pages/: 1_Info_Section.py  2_Education.py  3_Report_Status.py  Case_Overview.py  Generate_Report.py  Report_Status.py
pages/: 2_complaint_ui.py
