[project]
name = "UComply"
version = "0.0.1"
authors = [
  { name="Christophe Schmit", email="christophe.schmit@tum.de" },
]
description = "Project package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    
]
